--- a/index.html
+++ b/index.html
@@ -1,21 +1,91 @@
 <!doctype html>
 <html lang="nl">
-	
+
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Magdalena Mijatovic">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2324</title>
-	
+
+	<title>Browhouse | behandelingen</title>
+
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/png+xml" href="images/iconLogo.png">
 </head>
 
 <body>
-	<h1>Howdy FED2324</h1>
 
-	<script defer src="scripts/script.js"></script>
+	<header>
+
+		<a href="#"><img src="./images/logo_300x300.png" alt="Logo Browhouse"></a>
+
+		<nav>
+			<button>X</button>
+
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Shop</a></li>
+				<li><a class="active">Behandelingen</a></li>
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">Careers</a></li>
+				<li><a href="academy.html">Academy</a></li>
+				<li><a href="#">Boek behandeling</a></li>
+			</ul>
+		</nav>
+
+		<nav>
+			<ul>
+				<li>
+					<a href="#"><img src="./images//zoeken.png" alt="zoeken"></a>
+				</li>
+				<li>
+					<a href="#"><img src="./images/account.png" alt="account"></a>
+				</li>
+				<li>
+					<a href="#"><img src="./images/winkelmand.png" alt="winkelmand"></a>
+				</li>
+			</ul>
+		</nav>
+
+		<button>
+			<img src="./images/hamburger.png" alt="hamburger menu">
+		</button>
+
+		<p>Gratis verzending voor orders boven €75</p>
+	</header>
+
+	<main>
+		<h1>behandelingen</h1>
+		<section>
+			
+			<ul>
+
+				<li>
+					<img src="./images/FIENTREATMENTS_300x300.png">
+					<p>Onze meest populaire behandeling. Creëer vollere en fluffy wenkbrauwen met deze behandeling. De
+						browlift
+						is perfect voor dunne wenkbrauwen om een vollere look te creëren, maar is ook prachtig op
+						vollere
+						wenkbrauwen om ze fluffy te maken. De resultaten blijven 6-8 weken.</p>
+						<button>boek nu</button>
+				</li>
+
+
+				<li>
+					<img src="./images/imani-3_300x300.png">
+					<p>Deze behandeling geeft uw wimpers een krul en laat ze langer lijken. Na deze behandeling is
+						mascara
+						gedurende ongeveer 6 weken niet nodig. Deze behandeling is perfect als je niet elke dag mascara
+						wilt
+						dragen, of gewoon 's ochtends tijd wilt besparen.</p>
+						<button>boek nu</button>
+				</li>
+
+			</ul>
+		</section>
+	</main>
+
+
+		<script defer src="scripts/script.js"></script>
 </body>
-	
+
 </html>
