--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@
 
 		<nav>
 			<ul>
-				<li>
+				<!-- <li>
 					<a href="#"><img src="./images//zoeken.png" alt="zoeken"></a>
 				</li>
 				<li>
 					<a href="#"><img src="./images/account.png" alt="account"></a>
-				</li>
+				</li> -->
 				<li>
-					<a href="#"><img src="./images/winkelmand.png" alt="winkelmand"></a>
+					<a href="#"><svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-cart"
+							viewBox="0 0 37 40">
+							<path
+								d="M36.5 34.8L33.3 8h-5.9C26.7 3.9 23 .8 18.5.8S10.3 3.9 9.6 8H3.7L.5 34.8c-.2 1.5.4 2.4.9 3 .5.5 1.4 1.2 3.1 1.2h28c1.3 0 2.4-.4 3.1-1.3.7-.7 1-1.8.9-2.9zm-18-30c2.2 0 4.1 1.4 4.7 3.2h-9.5c.7-1.9 2.6-3.2 4.8-3.2zM4.5 35l2.8-23h2.2v3c0 1.1.9 2 2 2s2-.9 2-2v-3h10v3c0 1.1.9 2 2 2s2-.9 2-2v-3h2.2l2.8 23h-28z">
+							</path>
+						</svg></a>
 				</li>
 			</ul>
 		</nav>
@@ -54,38 +59,46 @@
 	</header>
 
 	<main>
-		<h1>behandelingen</h1>
-		<section>
-			
-			<ul>
+		
 
+		<section>
+			<h3>behandelingen</h3>
+			<ul>
 				<li>
-					<img src="./images/FIENTREATMENTS_300x300.png">
+					<img src="./images/browlift.png">
+					<h4>browlift</h4>
 					<p>Onze meest populaire behandeling. Creëer vollere en fluffy wenkbrauwen met deze behandeling. De
 						browlift
 						is perfect voor dunne wenkbrauwen om een vollere look te creëren, maar is ook prachtig op
 						vollere
 						wenkbrauwen om ze fluffy te maken. De resultaten blijven 6-8 weken.</p>
-						<button>boek nu</button>
+					<button>boek nu</button>
 				</li>
 
-
 				<li>
-					<img src="./images/imani-3_300x300.png">
+					<img src="./images/lashlift.png">
+					<h4>lashlift</h4>
 					<p>Deze behandeling geeft uw wimpers een krul en laat ze langer lijken. Na deze behandeling is
 						mascara
 						gedurende ongeveer 6 weken niet nodig. Deze behandeling is perfect als je niet elke dag mascara
 						wilt
 						dragen, of gewoon 's ochtends tijd wilt besparen.</p>
-						<button>boek nu</button>
+					<button>boek nu</button>
 				</li>
-
 			</ul>
+
 		</section>
+
+		<section>
+			<h2>packages</h2>
+			<p>Wij bieden pakketdeals aan voor onze meest populaire behandelingen. Ideaal voor onze vaste klanten of als
+				je gewoon meerdere behandelingen tegelijk wilt kopen. Bespaar geld en geniet van onze pakketten.</p>
+		</section>
+
 	</main>
 
 
-		<script defer src="scripts/script.js"></script>
+	<script defer src="scripts/script.js"></script>
 </body>
 
 </html>
