--- a/index.html
+++ b/index.html
@@ -95,7 +95,50 @@
 				je gewoon meerdere behandelingen tegelijk wilt kopen. Bespaar geld en geniet van onze pakketten.</p>
 		</section>
 
+		<section>
+			<ul>
+				<li>
+					<h4>THE FULL BROWLIFT - BUY 5, GET 6</h4>
+					<p>Onze meest populaire behandeling. Creëer vollere en fluffy wenkbrauwen met deze behandeling. De
+						browlift
+						is perfect voor dunne wenkbrauwen om een vollere look te creëren, maar is ook prachtig op
+						vollere
+						wenkbrauwen om ze fluffy te maken. De resultaten blijven 6-8 weken.
+					</p>
+					<p><span>€345 </span>(original price €413,70)</p>
+					<button>get it now</button>
+				</li>
+
+				<li>
+					<h4>THE FULL BROWLIFT - BUY 10, GET 12</h4>
+					<p>Deze behandeling geeft uw wimpers een krul en laat ze langer lijken. Na deze behandeling is
+						mascara
+						gedurende ongeveer 6 weken niet nodig. Deze behandeling is perfect als je niet elke dag mascara
+						wilt
+						dragen, of gewoon 's ochtends tijd wilt besparen.</p>
+						<p><span>€690</span> (original price €827,40)</p>
+					<button>get it now</button>
+				</li>
+				<li>
+					<h4>LASH LIFT + FULL BROW LIFT COMBO - BUY 5, GET 6</h4>
+					<p>Deze behandeling geeft uw wimpers een krul en laat ze langer lijken. Na deze behandeling is
+						mascara
+						gedurende ongeveer 6 weken niet nodig. Deze behandeling is perfect als je niet elke dag mascara
+						wilt
+						dragen, of gewoon 's ochtends tijd wilt besparen.</p>
+						<p><span>€625</span> (original price €749,70)</p>
+					<button>get it now</button>
+				</li>
+			</ul>
+		</section>
 	</main>
+
+	<footer>
+		<p>footer</p>
+		<section>
+			hallo
+		</section>
+	</footer>
 
 
 	<script defer src="scripts/script.js"></script>
