--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="author" content="Magdalena Mijatovic">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<title>Browhouse | behandelingen</title>
 
 	<link href="styles/style.css" rel="stylesheet">
@@ -13,75 +12,88 @@
 </head>
 
 <body>
-	
+
 
 	<header>
 		<p>Gratis verzending voor orders boven €75</p>
 		<section>
 
-		<a href="#"><img src="./images/logo_300x300.png" alt="Logo Browhouse"></a>
-	
+			<a href="#"><img src="./images/logo_300x300.png" alt="Logo Browhouse"></a>
 
-		<nav>
-			<button>X</button>
 
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Shop</a></li>
-				<li><a class="active">Behandelingen</a></li>
-				<li><a href="#">Contact</a></li>
-				<li><a href="#">Careers</a></li>
-				<li><a href="academy.html">Academy</a></li>
-				<li><a href="#">Boek behandeling</a></li>
-			</ul>
-		</nav>
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Shop</a></li>
+					<li><a class="active">Behandelingen</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Careers</a></li>
+					<li><a href="academy.html">Academy</a></li>
+					<li><a href="#">Boek behandeling</a></li>
+				</ul>
+			</nav>
 
-		<nav>
-			<ul>
-				<li>
-					<a href="#"> 
-						<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 37 40" alt="zoeken">
-							<path
-								d="M35.6 36l-9.8-9.8c4.1-5.4 3.6-13.2-1.3-18.1-5.4-5.4-14.2-5.4-19.7 0-5.4 5.4-5.4 14.2 0 19.7 2.6 2.6 6.1 4.1 9.8 4.1 3 0 5.9-1 8.3-2.8l9.8 9.8c.4.4.9.6 1.4.6s1-.2 1.4-.6c.9-.9.9-2.1.1-2.9zm-20.9-8.2c-2.6 0-5.1-1-7-2.9-3.9-3.9-3.9-10.1 0-14C9.6 9 12.2 8 14.7 8s5.1 1 7 2.9c3.9 3.9 3.9 10.1 0 14-1.9 1.9-4.4 2.9-7 2.9z">
+			<nav>
+				<ul>
+					<li>
+						<a href="#">
+							<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 37 40"
+								alt="zoeken">
+								<path
+									d="M35.6 36l-9.8-9.8c4.1-5.4 3.6-13.2-1.3-18.1-5.4-5.4-14.2-5.4-19.7 0-5.4 5.4-5.4 14.2 0 19.7 2.6 2.6 6.1 4.1 9.8 4.1 3 0 5.9-1 8.3-2.8l9.8 9.8c.4.4.9.6 1.4.6s1-.2 1.4-.6c.9-.9.9-2.1.1-2.9zm-20.9-8.2c-2.6 0-5.1-1-7-2.9-3.9-3.9-3.9-10.1 0-14C9.6 9 12.2 8 14.7 8s5.1 1 7 2.9c3.9 3.9 3.9 10.1 0 14-1.9 1.9-4.4 2.9-7 2.9z">
 
-							</path>
-						</svg>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 28.33 37.68" alt="account">
-							<path
-								d="M14.17 14.9a7.45 7.45 0 1 0-7.5-7.45 7.46 7.46 0 0 0 7.5 7.45zm0-10.91a3.45 3.45 0 1 1-3.5 3.46A3.46 3.46 0 0 1 14.17 4zM14.17 16.47A14.18 14.18 0 0 0 0 30.68c0 1.41.66 4 5.11 5.66a27.17 27.17 0 0 0 9.06 1.34c6.54 0 14.17-1.84 14.17-7a14.18 14.18 0 0 0-14.17-14.21zm0 17.21c-6.3 0-10.17-1.77-10.17-3a10.17 10.17 0 1 1 20.33 0c.01 1.23-3.86 3-10.16 3z">
-							</path>
-						</svg>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 37 40" alt="winkelmand">
-							<path
-								d="M36.5 34.8L33.3 8h-5.9C26.7 3.9 23 .8 18.5.8S10.3 3.9 9.6 8H3.7L.5 34.8c-.2 1.5.4 2.4.9 3 .5.5 1.4 1.2 3.1 1.2h28c1.3 0 2.4-.4 3.1-1.3.7-.7 1-1.8.9-2.9zm-18-30c2.2 0 4.1 1.4 4.7 3.2h-9.5c.7-1.9 2.6-3.2 4.8-3.2zM4.5 35l2.8-23h2.2v3c0 1.1.9 2 2 2s2-.9 2-2v-3h10v3c0 1.1.9 2 2 2s2-.9 2-2v-3h2.2l2.8 23h-28z">
-							</path>
-						</svg>
-					</a>
-				</li>
-			</ul>
-		</nav>
+								</path>
+							</svg>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 28.33 37.68"
+								alt="account">
+								<path
+									d="M14.17 14.9a7.45 7.45 0 1 0-7.5-7.45 7.46 7.46 0 0 0 7.5 7.45zm0-10.91a3.45 3.45 0 1 1-3.5 3.46A3.46 3.46 0 0 1 14.17 4zM14.17 16.47A14.18 14.18 0 0 0 0 30.68c0 1.41.66 4 5.11 5.66a27.17 27.17 0 0 0 9.06 1.34c6.54 0 14.17-1.84 14.17-7a14.18 14.18 0 0 0-14.17-14.21zm0 17.21c-6.3 0-10.17-1.77-10.17-3a10.17 10.17 0 1 1 20.33 0c.01 1.23-3.86 3-10.16 3z">
+								</path>
+							</svg>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 37 40"
+								alt="winkelmand">
+								<path
+									d="M36.5 34.8L33.3 8h-5.9C26.7 3.9 23 .8 18.5.8S10.3 3.9 9.6 8H3.7L.5 34.8c-.2 1.5.4 2.4.9 3 .5.5 1.4 1.2 3.1 1.2h28c1.3 0 2.4-.4 3.1-1.3.7-.7 1-1.8.9-2.9zm-18-30c2.2 0 4.1 1.4 4.7 3.2h-9.5c.7-1.9 2.6-3.2 4.8-3.2zM4.5 35l2.8-23h2.2v3c0 1.1.9 2 2 2s2-.9 2-2v-3h10v3c0 1.1.9 2 2 2s2-.9 2-2v-3h2.2l2.8 23h-28z">
+								</path>
+							</svg>
+						</a>
+					</li>
+				</ul>
+			</nav>
 
-		<button>
+			<button>
+				<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 37 40" alt="hamburger menu">
+					<path
+						d="M33.5 25h-30c-1.1 0-2-.9-2-2s.9-2 2-2h30c1.1 0 2 .9 2 2s-.9 2-2 2zm0-11.5h-30c-1.1 0-2-.9-2-2s.9-2 2-2h30c1.1 0 2 .9 2 2s-.9 2-2 2zm0 23h-30c-1.1 0-2-.9-2-2s.9-2 2-2h30c1.1 0 2 .9 2 2s-.9 2-2 2z">
+					</path>
+				</svg>
+			</button>
 
-		</button>
+			<button>
+				<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 40 40">
+					<path
+						d="M23.868 20.015L39.117 4.78c1.11-1.108 1.11-2.77 0-3.877-1.109-1.108-2.773-1.108-3.882 0L19.986 16.137 4.737.904C3.628-.204 1.965-.204.856.904c-1.11 1.108-1.11 2.77 0 3.877l15.249 15.234L.855 35.248c-1.108 1.108-1.108 2.77 0 3.877.555.554 1.248.831 1.942.831s1.386-.277 1.94-.83l15.25-15.234 15.248 15.233c.555.554 1.248.831 1.941.831s1.387-.277 1.941-.83c1.11-1.109 1.11-2.77 0-3.878L23.868 20.015z">
+					</path>
+				</svg>
+			</button>
 
-	</section>
-		
+		</section>
+
 	</header>
 
 	<main>
 
 
 		<section>
-			<h3>behandelingen</h3>
+			<h2>behandelingen</h2>
 			<ul>
 				<li>
 					<img src="./images/browlift.png">
@@ -109,7 +121,7 @@
 		</section>
 
 		<section>
-			<h2>packages</h2>
+			<h3>packages</h3>
 			<p>Wij bieden pakketdeals aan voor onze meest populaire behandelingen. Ideaal voor onze vaste klanten of als
 				je gewoon meerdere behandelingen tegelijk wilt kopen. Bespaar geld en geniet van onze pakketten.</p>
 		</section>
@@ -117,7 +129,7 @@
 		<section>
 			<ul>
 				<li>
-					<h4>THE FULL BROWLIFT - BUY 5, GET 6</h4>
+					<h4>the full browlift - buy 5, get 6</h4>
 					<p>Onze meest populaire behandeling. Creëer vollere en fluffy wenkbrauwen met deze behandeling. De
 						browlift
 						is perfect voor dunne wenkbrauwen om een vollere look te creëren, maar is ook prachtig op
@@ -129,7 +141,7 @@
 				</li>
 
 				<li>
-					<h4>THE FULL BROWLIFT - BUY 10, GET 12</h4>
+					<h4>the full browlift - buy 10, get 12</h4>
 					<p>Deze behandeling geeft uw wimpers een krul en laat ze langer lijken. Na deze behandeling is
 						mascara
 						gedurende ongeveer 6 weken niet nodig. Deze behandeling is perfect als je niet elke dag mascara
@@ -139,7 +151,7 @@
 					<button>get it now</button>
 				</li>
 				<li>
-					<h4>LASH LIFT + FULL BROW LIFT COMBO - BUY 5, GET 6</h4>
+					<h4>lashlift + full browlift combo - buy 5, get 6</h4>
 					<p>Deze behandeling geeft uw wimpers een krul en laat ze langer lijken. Na deze behandeling is
 						mascara
 						gedurende ongeveer 6 weken niet nodig. Deze behandeling is perfect als je niet elke dag mascara
