--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Shop</a></li>
-					<li><a class="active" href="index.html">Treatments</a></li>
+					<li><a class="active" aria-currrent="page" href="index.html">Treatments</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="#">Book treatment</a></li>
 
@@ -235,7 +235,7 @@
 		<section>
 			<section>
 				<!-- https://www.html-code-generator.com/html/drop-down/currency-names -->
-				<select class="form-select" id="currency" name="currency">
+				<select >
 					<option value="USD">usd</option>
 					<option value="EUR">eur</option>
 					<option value="JPY">jpy</option>
