--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<nav>
 				<ul>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Shop</a></li>
+					<li><a href="shop.html">Shop</a></li>
 					<li><a class="active" aria-currrent="page" href="index.html">Treatments</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="#">Book treatment</a></li>
@@ -37,8 +37,8 @@
 				<ul>
 					<li>
 						<a href="#">
-							<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 37 40"
-								alt="zoeken">
+							<svg aria-hidden="false" focusable="true" role="presentation" viewBox="0 0 37 40"
+								alt="search">
 								<path
 									d="M35.6 36l-9.8-9.8c4.1-5.4 3.6-13.2-1.3-18.1-5.4-5.4-14.2-5.4-19.7 0-5.4 5.4-5.4 14.2 0 19.7 2.6 2.6 6.1 4.1 9.8 4.1 3 0 5.9-1 8.3-2.8l9.8 9.8c.4.4.9.6 1.4.6s1-.2 1.4-.6c.9-.9.9-2.1.1-2.9zm-20.9-8.2c-2.6 0-5.1-1-7-2.9-3.9-3.9-3.9-10.1 0-14C9.6 9 12.2 8 14.7 8s5.1 1 7 2.9c3.9 3.9 3.9 10.1 0 14-1.9 1.9-4.4 2.9-7 2.9z">
 
@@ -48,7 +48,7 @@
 					</li>
 					<li>
 						<a href="#">
-							<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 28.33 37.68"
+							<svg aria-hidden="false" focusable="true" role="presentation" viewBox="0 0 28.33 37.68"
 								alt="account">
 								<path
 									d="M14.17 14.9a7.45 7.45 0 1 0-7.5-7.45 7.46 7.46 0 0 0 7.5 7.45zm0-10.91a3.45 3.45 0 1 1-3.5 3.46A3.46 3.46 0 0 1 14.17 4zM14.17 16.47A14.18 14.18 0 0 0 0 30.68c0 1.41.66 4 5.11 5.66a27.17 27.17 0 0 0 9.06 1.34c6.54 0 14.17-1.84 14.17-7a14.18 14.18 0 0 0-14.17-14.21zm0 17.21c-6.3 0-10.17-1.77-10.17-3a10.17 10.17 0 1 1 20.33 0c.01 1.23-3.86 3-10.16 3z">
@@ -58,8 +58,8 @@
 					</li>
 					<li>
 						<a href="#">
-							<svg aria-hidden="true" focusable="false" role="presentation" viewBox="0 0 37 40"
-								alt="winkelmand">
+							<svg aria-hidden="false" focusable="true" role="presentation" viewBox="0 0 37 40"
+								alt="shopping chart">
 								<path
 									d="M36.5 34.8L33.3 8h-5.9C26.7 3.9 23 .8 18.5.8S10.3 3.9 9.6 8H3.7L.5 34.8c-.2 1.5.4 2.4.9 3 .5.5 1.4 1.2 3.1 1.2h28c1.3 0 2.4-.4 3.1-1.3.7-.7 1-1.8.9-2.9zm-18-30c2.2 0 4.1 1.4 4.7 3.2h-9.5c.7-1.9 2.6-3.2 4.8-3.2zM4.5 35l2.8-23h2.2v3c0 1.1.9 2 2 2s2-.9 2-2v-3h10v3c0 1.1.9 2 2 2s2-.9 2-2v-3h2.2l2.8 23h-28z">
 								</path>
@@ -89,7 +89,7 @@
 
 
 	</header>
-
+<!-- <h1>Welcome on the Browhouse site.</h1> -->
 	<main>
 
 
@@ -97,7 +97,7 @@
 			<h2>Treatments</h2>
 			<ul>
 				<li>
-					<img src="./images/browlift.png">
+					<img src="./images/browlift.png" alt="Woman with nice lifted eyebrows">
 					<h4>Browlift</h4>
 					<p>The browlift, also known as brow lamination, is our most popular treatment. Create fuller and
 						more in shape brows with the brow lamination treatment. During this treatment we lift your hairs
@@ -121,7 +121,7 @@
 				</li>
 
 				<li>
-					<img src="./images/lashlift.png">
+					<img src="./images/lashlift.png" alt="Woman with nice lifted lashes">
 					<h4>Lashlift</h4>
 					<p>This treatment gives your lashes a curl and makes them look longer. The lashlift treatment
 						accentuates your eyes and will leave you fuller, longer and curly lashes. The treatment is
@@ -187,7 +187,7 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="#">Shop</a>
+						<a href="shop.html">Shop</a>
 					</li>
 					<li>
 						<a href="#">Story</a>
@@ -205,7 +205,7 @@
 						<a href="#">Working at browhouse</a>
 					</li>
 					<li>
-						<a href="academy.html">Acadamy</a>
+						<a href="#">Acadamy</a>
 					</li>
 					<li>
 						<a href="#">FAQ</a>
@@ -233,7 +233,7 @@
 
 
 		<section>
-			<section>
+			
 				<!-- https://www.html-code-generator.com/html/drop-down/currency-names -->
 				<select >
 					<option value="USD">usd</option>
@@ -247,17 +247,17 @@
 					<option value="NZD">nzd</option>
 					<option value="HKD">hkd</option>
 				</select>
-			</section>
+			
 
 			<ul>
-				<li><a href="https://www.facebook.com/browhousenl/"><svg aria-hidden="true" focusable="false"
+				<li><a href="https://www.facebook.com/browhousenl/"><svg aria-hidden="false" focusable="true" alt="link to facebook"
 							role="presentation" viewBox="0 0 20 20">
-							<path fill="#444"
+							<path
 								d="M18.05.811q.439 0 .744.305t.305.744v16.637q0 .439-.305.744t-.744.305h-4.732v-7.221h2.415l.342-2.854h-2.757v-1.83q0-.659.293-1t1.073-.342h1.488V3.762q-.976-.098-2.171-.098-1.634 0-2.635.964t-1 2.72V9.47H7.951v2.854h2.415v7.221H1.413q-.439 0-.744-.305t-.305-.744V1.859q0-.439.305-.744T1.413.81H18.05z">
 							</path>
 						</svg></a></li>
-				<li><a href="https://www.instagram.com/browhouse"><svg aria-hidden="true" focusable="false"
-							role="presentation" class="icon icon-instagram" viewBox="0 0 512 512">
+				<li><a href="https://www.instagram.com/browhouse"><svg aria-hidden="true" focusable="false" alt="link to instagram"
+							role="presentation" viewBox="0 0 512 512">
 							<path
 								d="M256 49.5c67.3 0 75.2.3 101.8 1.5 24.6 1.1 37.9 5.2 46.8 8.7 11.8 4.6 20.2 10 29 18.8s14.3 17.2 18.8 29c3.4 8.9 7.6 22.2 8.7 46.8 1.2 26.6 1.5 34.5 1.5 101.8s-.3 75.2-1.5 101.8c-1.1 24.6-5.2 37.9-8.7 46.8-4.6 11.8-10 20.2-18.8 29s-17.2 14.3-29 18.8c-8.9 3.4-22.2 7.6-46.8 8.7-26.6 1.2-34.5 1.5-101.8 1.5s-75.2-.3-101.8-1.5c-24.6-1.1-37.9-5.2-46.8-8.7-11.8-4.6-20.2-10-29-18.8s-14.3-17.2-18.8-29c-3.4-8.9-7.6-22.2-8.7-46.8-1.2-26.6-1.5-34.5-1.5-101.8s.3-75.2 1.5-101.8c1.1-24.6 5.2-37.9 8.7-46.8 4.6-11.8 10-20.2 18.8-29s17.2-14.3 29-18.8c8.9-3.4 22.2-7.6 46.8-8.7 26.6-1.3 34.5-1.5 101.8-1.5m0-45.4c-68.4 0-77 .3-103.9 1.5C125.3 6.8 107 11.1 91 17.3c-16.6 6.4-30.6 15.1-44.6 29.1-14 14-22.6 28.1-29.1 44.6-6.2 16-10.5 34.3-11.7 61.2C4.4 179 4.1 187.6 4.1 256s.3 77 1.5 103.9c1.2 26.8 5.5 45.1 11.7 61.2 6.4 16.6 15.1 30.6 29.1 44.6 14 14 28.1 22.6 44.6 29.1 16 6.2 34.3 10.5 61.2 11.7 26.9 1.2 35.4 1.5 103.9 1.5s77-.3 103.9-1.5c26.8-1.2 45.1-5.5 61.2-11.7 16.6-6.4 30.6-15.1 44.6-29.1 14-14 22.6-28.1 29.1-44.6 6.2-16 10.5-34.3 11.7-61.2 1.2-26.9 1.5-35.4 1.5-103.9s-.3-77-1.5-103.9c-1.2-26.8-5.5-45.1-11.7-61.2-6.4-16.6-15.1-30.6-29.1-44.6-14-14-28.1-22.6-44.6-29.1-16-6.2-34.3-10.5-61.2-11.7-27-1.1-35.6-1.4-104-1.4z">
 							</path>
